--- a/view/frontend/templates/js.phtml
+++ b/view/frontend/templates/js.phtml
@@ -16,7 +16,10 @@ $data 		= $helper->getConfigModule('general');
             	$('.zoomContainer').remove();
             	var img = $('.product.media .fotorama__stage .fotorama__active img');
             	if(!img.length) return;
-            	if(fotorama.activeFrame && fotorama.activeFrame.full ) img.data('zoom-image', fotorama.activeFrame.full);
+                if(fotorama.activeFrame.type){
+                    if(fotorama.activeFrame.type == 'video') return;
+                    if(fotorama.activeFrame.full) img.data('zoom-image', fotorama.activeFrame.full);
+                }
             	var defaults = {
             		zoomWindowWidth	: img.height(),
             		zoomWindowHeight: img.width()
