Fixed position and RTL

--- a/view/frontend/templates/js.phtml
+++ b/view/frontend/templates/js.phtml
@@ -1,5 +1,4 @@
 <?php
-$jsonHelper = $this->helper('Magento\Framework\Json\Helper\Data');
 $helper     = $this->helper('Magepow\Productzoom\Helper\Data');
 $data       = $helper->getConfigModule('general');
 ?>
@@ -11,7 +10,7 @@ $data       = $helper->getConfigModule('general');
             "use strict";
             if( $(window).width() < 768 ) return;
 
-            var options = <?php echo is_array($data) ? $jsonHelper->jsonEncode($data) : '{}' ?>;
+            var options = <?php echo is_array($data) ? json_encode( $data, JSON_NUMERIC_CHECK ) : '{}' ?>;
             $('head').append('<style type="text/css">.zoomContainer{z-index:' + options.zIndex + '}</style>');
             $(document).on('fotorama:load fotorama:showend fotorama:fullscreenenter fotorama:fullscreenexit', function (event, fotorama, extra) {
                 $('.zoomContainer').remove();
